<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Budaya Indonesia</string>
    <string name="action_settings">Settings</string>
    <string name="copyright">© Salin Kanan Oleh Team ADEK</string>
    <string name="about">Tentang Team ADEK</string>
    <string name="culture">Tentang BUDI(Budaya Indonesia)</string>
    <string name="exit">Keluar Aplikasi</string>
    <string name="select">Pilih Provinsi</string>
</resources>
