<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/testbg">

    <Button
        
        android:id="@+id/btnculture"
         android:textColor="#fff"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnlist"
        android:layout_centerHorizontal="true"
        android:text="@string/culture" />

    <Button
         android:textColor="#fff"
        android:id="@+id/btnabout"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnculture"
        android:layout_centerHorizontal="true"
        android:text="@string/about" />

    <Button
        android:id="@+id/btnexit"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:layout_below="@+id/btnabout"
        android:layout_centerHorizontal="true"
        android:text="@string/exit" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:text="@string/copyright"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btnlist"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textColor="#fff"
        android:layout_marginTop="117dp"
        android:text="@string/select" />
 
</RelativeLayout>